--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "16",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -23,6 +25,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.8.0",
+    "uuid": "^9.0.0"
   }
 }
